ui-tests/tests/fail/invalid-args.rs
use mic::answer;

#[answer(+)]
fn main() -> _ {
    42
}
